// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BackgroundImage renders 1`] = `
<DocumentFragment>
  .c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

.c1 {
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
  background-color: #eceff2;
  background-attachment: scroll;
}

<div
    class="c0"
  >
    <div
      class="c1"
    />
  </div>
</DocumentFragment>
`;

exports[`BackgroundImage renders with border radius 1`] = `
<DocumentFragment>
  .c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

.c1 {
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
  background-color: #eceff2;
  background-attachment: scroll;
  height: 320px;
  border-radius: 9999px 9999px 0 0;
}

<div
    class="c0"
  >
    <div
      class="c1"
      data-testid="background-image"
      height="320px"
    />
  </div>
</DocumentFragment>
`;

exports[`BackgroundImage renders with height 1`] = `
<DocumentFragment>
  .c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

.c1 {
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
  background-color: #eceff2;
  background-attachment: scroll;
  height: 320px;
}

<div
    class="c0"
  >
    <div
      class="c1"
      height="320px"
    />
  </div>
</DocumentFragment>
`;

exports[`BackgroundImage renders with image 1`] = `
<DocumentFragment>
  .c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

.c1 {
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
  background-color: #eceff2;
  background-attachment: scroll;
  background-image: url(hello.png);
}

<div
    class="c0"
  >
    <div
      class="c1"
    />
  </div>
</DocumentFragment>
`;
